# systems_urban_ground_truth

./: CMakeLists.txt  Urban_Artifact_Ground_Truth.xlsx  Urban_Fiducials_Ground_Truth.xlsx  package.xml  readme.md
config/: alpha_artifacts_1.yaml  alpha_artifacts_2.yaml  beta_artifacts_1.yaml  beta_artifacts_2.yaml
launch/: test_subt_logo.launch  view.launch  view_urban.rviz
network/: readme.md
network/data/: alpha_edgelist.csv  alpha_edgelist_nodata.csv  beta_edgelist.csv  beta_edgelist_nodata.csv
