<package format="2">
  <name>urban_ground_truth</name>
  <version>1.0.0</version>
  <description>
    Survey scan and artifact data from SubT Urban Circuit
  </description>
  <maintainer email="ryhalt@gmail.com">Ryan Halterman</maintainer>
  <maintainer email="angela.c.maio.civ@mail.mil">Angela Maio</maintainer>
  <maintainer email="jonathan.r.fink3.civ@mail.mil">Jon Fink</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_ros</depend>

</package>
